...
    <item android:title="@string/event"
        android:icon="@drawable/ic_calender"
        android:id="@+id/attendeeEventMenu"
        />
    <item android:title="@string/account"
        android:icon="@drawable/ic_person"
        android:id="@+id/attendeeAccount"/>
</menu>
