...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".attendee.AttendeeAccount">

    <Button
        android:id="@+id/btnCustomizeProfile"
        android:layout_width="375dp"
        android:layout_height="200dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/rounded_button_background"
        android:drawableStart="@drawable/ic_person"
        android:onClick="onCustomizeProfileClicked"
...
