...
        app:layout_constraintTop_toBottomOf="@+id/HomepageDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_enable_geolocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="Enable Geolocation"
        android:textSize="24sp"
...
