<?xml version="1.0" encoding="utf-8"?>
<!--This is the organizerActivity it contains a NavHostFragment Attached to the organizer_nav_graph(Check navigation folder)
    this handles the switching of fragments the other part is the bottom navigation which just switches from the head of the organizer_nav_graph-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".organizer.OrganizerActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerOrganizerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationOrganizerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:navGraph="@navigation/organizer_nav_graph"/>




    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationOrganizerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu_organizer" />

</androidx.constraintlayout.widget.ConstraintLayout>