...
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/userProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/eventDescription" />


    <Button
        android:id="@+id/btnViewEvent"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:text="@string/select"
        android:backgroundTint="#FFDB58"
...
